Changelog for 1.1.0

Added:
  - $saveMap command
  - $copySkin command
  - AntiGhast module
  - LogoutSpots module
  - MainMenu module
  - IgnoreActive setting in ViewModel module
  - More easings to the ClickGUI and ArrayList modules
  - SuperheroFX module
  - EnchantColour module
  - LagNotifier HUD module
  - A panel to the HUD editor
  - Blur module
  - NewChunks module
  - UnfocusedCPU module
  - Particle settings to NoRender
  - Added TPS HUD module
  - Added CPS HUD module
  - Packet, UpdatedNCP, and Minis modes to Criticals
  - AutoSable module
  - Packet graphs HUD modules
  - BetterScreenshot module
  - NoHandshake module
  - ServerBrand HUD module
  - Added Infinite setting to ChatModifications
  - Added TickShift module
  - Added Movement setting to Timer

Reworked:
  - Main Menu
  - Default ClickGUI
  - ArrayList module
  - HoleESP module
  - AutoCrystal module
  - The style of most HUD modules
  - Offhand module

Changed:
  - Updated the style of the ShulkerViewer module
  - Merged the Notifier module and DonkeyAlert module into the Alert module
  - Changed the AutoWalk module's category to Movement
  - Updated Nametags